SERVER-24631: Add TTL collection namespace cache