src/mongo/db/catalog/collection_info_cache.cpp
@@ -42,6 +42,7 @@
 #include "mongo/db/query/plan_cache.h"
 #include "mongo/db/query/planner_ixselect.h"
 #include "mongo/db/service_context.h"
+#include "mongo/db/ttl_collection_cache.h"
 #include "mongo/util/clock_source.h"
 #include "mongo/util/debug_util.h"
 #include "mongo/util/log.h"
@@ -55,6 +56,13 @@ CollectionInfoCache::CollectionInfoCache(Collection* collection)
       _querySettings(new QuerySettings()),
       _indexUsageTracker(getGlobalServiceContext()->getPreciseClockSource()) {}
 
+CollectionInfoCache::~CollectionInfoCache() {
+    // Necessary because the collection cache will not explicitly get updated upon database drop.
+    if (_hasTTLIndex) {
+        TTLCollectionCache& ttlCollectionCache = TTLCollectionCache::get(getGlobalServiceContext());
+        ttlCollectionCache.unregisterCollection(_collection->ns());
+    }
+}
 
 const UpdateIndexData& CollectionInfoCache::getIndexKeys(OperationContext* txn) const {
     // This requires "some" lock, and MODE_IS is an expression for that, for now.
@@ -66,12 +74,19 @@ const UpdateIndexData& CollectionInfoCache::getIndexKeys(OperationContext* txn) 
 void CollectionInfoCache::computeIndexKeys(OperationContext* txn) {
     _indexedPaths.clear();
 
+    bool hadTTLIndex = _hasTTLIndex;
+    _hasTTLIndex = false;
+
     IndexCatalog::IndexIterator i = _collection->getIndexCatalog()->getIndexIterator(txn, true);
     while (i.more()) {
         IndexDescriptor* descriptor = i.next();
 
         if (descriptor->getAccessMethodName() != IndexNames::TEXT) {
             BSONObj key = descriptor->keyPattern();
+            const BSONObj& infoObj = descriptor->infoObj();
+            if (infoObj.hasField("expireAfterSeconds")) {
+                _hasTTLIndex = true;
+            }
             BSONObjIterator j(key);
             while (j.more()) {
                 BSONElement e = j.next();
@@ -109,6 +124,16 @@ void CollectionInfoCache::computeIndexKeys(OperationContext* txn) {
             for (auto it = paths.begin(); it != paths.end(); ++it) {
                 _indexedPaths.addPath(*it);
             }
+        }
+    }
+
+    TTLCollectionCache& ttlCollectionCache = TTLCollectionCache::get(getGlobalServiceContext());
+
+    if (_hasTTLIndex != hadTTLIndex) {
+        if (_hasTTLIndex) {
+            ttlCollectionCache.registerCollection(_collection->ns());
+        } else {
+            ttlCollectionCache.unregisterCollection(_collection->ns());
         }
     }
 
