src/mongo/db/catalog/collection_info_cache.h
@@ -49,6 +49,8 @@ class CollectionInfoCache {
 public:
     CollectionInfoCache(Collection* collection);
 
+    ~CollectionInfoCache();
+
     /**
      * Get the PlanCache for this collection.
      */
@@ -130,6 +132,8 @@ private:
      * when index composition changes.
      */
     void rebuildIndexData(OperationContext* txn);
+
+    bool _hasTTLIndex = false;
 };
 
 }  // namespace mongo
